2009-07-20 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* test/ABT/MonitorABT
	[2821718] Former reports included in the report zip file if ABT fails
	(patch from Pratayusha Doddapaneni)

2009-06-25  Sean Swehla  <smswehla@linux.vnet.ibm.com>

	* fileRepository.c:
	[ 2727799 ] Qualifier provider exiting due to a SIGSEGV signal
	(patch from Shigeyoshi Hashi, tested by Pratayusha Doddapaneni)
	
2009-06-16  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* getSchema.pre.in:
	[ 2807245 ] Bump downloaded CIM schema to 2.21

	* interopServerProvider.c, default.reg.in, interop.mof:
	[ 2807405 ] Implement CIM_IndicationService
	
2009-06-11  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* httpAdapter.c:
	[ 2804477 ] SFCB doesn't properly parse content-length from some clients
	(patch from J. Bart Whitely)
	
2009-06-11  Michael Chase-Salerno  <bratac@linux.vnet.ibm.com>

	* mlog.c, mlog.h, sfcBroker.c, msgqueue.c, msgqueue.h:
	[ 2804331 ] Reduce logging verbosity 
	
2009-06-05  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* interopServerProvider.c:
	[ 2761168 ] Return value does not comply DSP0200
	(patch from Shigeyoshi Hashi)
	
	* cimXmlRequest.c, cimXmlGen.c:
	[ 2736593 ] Null/No NewValue of SetProperty causes segfault
	(patch from Shigeyoshi Hashi)

	* cimXmlParser.c:
	[ 2736627 ] The type of NewValue is not checked at free
	(patch from Shigeyoshi Hashi)

	* cimXmlOps.y:
	[ 2780152 ] SetProperty without NewValue gets segfault
	(patch from Shigeyoshi Hashi)
	
	* cimXmlGen.c:
	[ 2799756 ] Bad xml for Array of embedded instance out parameters
	(patch from J. Bart Whitely)

2009-06-04  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* httpAdapter.c, man/sfcbd.1.pre.in:
	[ 2766344 ] Allow the client trust store to be a directory
	(patch from Mihai Ibanescu)
	
2009-04-06 Sean Swehla <smswehla@linux.vnet.ibm.com>

	* Makefile.am, configure.ac, wbemcat, wbemcat.1.pre.in
	[ 2794013 ] Multiple wbemcats

2009-04-06 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>
