@@ -10,6 +10,7 @@ Bugs fixed:
 
 - 2727799 Qualifier provider exiting due to a SIGSEGV signal
 - 2821718 Former reports included in the report zip file if ABT fails
+- 2802113 make footprint doesn't account for .so files
 
 
 Changes in 1.3.4
